--- a/aula01/public/pages/room/index.html
+++ b/aula01/public/pages/room/index.html
@@ -12,9 +12,10 @@
     <script defer src="./deps/peerjs.min.js"></script>
     <script src="./deps/socket.io.min.js" defer></script>
 
-    
+
     <script src="src/util/util.js" defer></script>
     <script src="src/util/media.js" defer></script>
+    <script src="src/util/peer.js" defer></script>
     <script src="src/util/socket.js" defer></script>
     <script src="src/view.js" defer></script>
     <script src="src/business.js" defer></script>
@@ -41,7 +42,7 @@
           <div class="main__controls__block">
             <div class="main__controls__button">
               <i class="fas fa-user-friends badge-wrapper" title="Participants">
-                <span class="badge badge-secondary" id="participants">1</span>
+                <span class="badge badge-secondary" id="participants"></span>
               </i>
             </div>
             <div class="main__controls__button disabled" >
